--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@google-cloud/debug-agent": "^7.0.0",
     "@google-cloud/functions-framework": "^3.1.0",
-    "escape-html": "^1.0.3"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@google-cloud/pubsub": "^3.0.0",
